implemented terms and privacy policy page and ui fixes

--- a/Web/src/app/blog1/blog1.component.html
+++ b/Web/src/app/blog1/blog1.component.html
@@ -39,7 +39,7 @@
            <p>Abayas, now represent the personality, pride, and fashion sense of  Emirati women. They are no longer restricted to religious symbols, but also carry strong cultural implications that seem to be recognized which rightly explains the use of Emirati fashion across the globe. Abaya is now an outfit with its own independent standing and communicates a strong fashion statement. This journey through the ages communicates the emergence of the fashion trends of the Middle East with time.</p>
          </div>
          <div class="col-md-5">
-           <img src="assets/images/blog011.jpg" alt="">
+           <img src="assets/images/abtimg02.jpg" alt="">
          </div>
        </div>
 
