--- a/Web/src/app/footer/footer.component.html
+++ b/Web/src/app/footer/footer.component.html
@@ -7,16 +7,16 @@
       <div class="foonav">
         <ul>
           <li>
+            <a routerLink="/home">Home</a>
             <a routerLink="/story">Our Story</a>
+          </li>
+          <li>
             <a routerLink="/products">Our Products</a>
+            <a routerLink="/blogs">Blog</a>
           </li>
           <li>
-            <a href="">FAQ</a>
-            <a href="">Blog</a>
-          </li>
-          <li>
-            <a href="">About Us</a>
-            <a href="">Terms & Conditions</a>
+            <a routerLink="/privacy">Privacy Policy</a>
+            <a routerLink="/terms">Terms & Conditions</a>
           </li>
         </ul>
       </div>
