--- a/Web/src/app/story/story.component.html
+++ b/Web/src/app/story/story.component.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-md-4">
             <img src="assets/images/abtimg01.jpg" alt="" class="img-fluid">
-            <img src="assets/images/abtimg02.jpg" alt="" class="over">
+            <!-- <img src="assets/images/abtimg02.jpg" alt="" class="over"> -->
           </div>
           <div class="col-md-8">
             <img src="assets/images/icons/vision.jpg" alt="">
