1. After navigation, scroll to page top. 2. Blogs page, routerlink updated. 3. Twitter link updated in header and footer. 4. Year and Month updated in story page.

--- a/Web/src/app/story/story.component.html
+++ b/Web/src/app/story/story.component.html
@@ -31,7 +31,7 @@
           <div class="col-md-8">
             <img src="assets/images/icons/vision.jpg" alt="">
             <h2>Our Story</h2>
-            <p>Our story began in YYYY, when Nisha and Shemi, who met by chance at Fujairah, bonded over their love for clothing and style, inspiring them to launch NishOmi. Their friendship and passion joined hands with the Emirati culture and Islamic tradition to line a luxury collection of Abayas. In a short span of xyz months, NishOmi has won hearts with its modest sensibility and flair for variety.</p>
+            <p>Our story began in 2018, when Nisha and Shemi, who met by chance at Fujairah, bonded over their love for clothing and style, inspiring them to launch NishOmi. Their friendship and passion joined hands with the Emirati culture and Islamic tradition to line a luxury collection of Abayas. In a short span of 4 to 5 months, NishOmi has won hearts with its modest sensibility and flair for variety.</p>
             <p>Abaya reflects the personality, pride and sense of fashion of Arabic women which now has emerged to create a space of its own globally. Drawing inspiration from these aspects, NishOmi explores the untapped creativity and aesthetics that could add more to this piece of clothing. The aim is to capture the heritage, global appeal, and modesty through details, novel cuts, and styles.
               In their journey of creating a trend in Islamic fashion for women, NishOmi leaves a benchmark by being an exquisite women’s brand, in terms of ownership, management, and clientele.
             </p>
