--- a/Web/src/app/blogs/blogs.component.html
+++ b/Web/src/app/blogs/blogs.component.html
@@ -4,22 +4,22 @@
       <ul class="bloglist">
         <li>
           <div class="postimg">
-            <a href="abaya-thenamdnow.html"><img src="assets/images/blog01.jpg" alt=""></a>
+            <a routerLink="/abaya"><img src="assets/images/blog01.jpg" alt=""></a>
           </div>
           <div class="postdtls">
             <h6 style="background-color: #4ca80b">Fashion</h6>
-            <h3><a href="abaya-thenamdnow.html">ABAYA: THEN AND NOW</a></h3>
+            <h3><a routerLink="/abaya">ABAYA: THEN AND NOW</a></h3>
             <p>A long cloak or robe, popularly known as Abaya, also referred to as Aba, Abah, all represent this everyday clothing that effortlessly covers the entire body.</p>
             <a routerLink="/abaya">Read More <i class="icofont-simple-right"></i></a>
           </div>
         </li>
         <li>
           <div class="postimg">
-            <a href="allaboutsleeves.html"><img src="assets/images/blog02.jpg" alt=""></a>
+            <a routerLink="/sleeves"><img src="assets/images/blog02.jpg" alt=""></a>
           </div>
           <div class="postdtls">
             <h6 style="background-color: #fc4a00">INSPIRATION</h6>
-            <h3><a href="allaboutsleeves.html">All About Sleeves</a></h3>
+            <h3><a routerLink="/sleeves">All About Sleeves</a></h3>
             <p>A long cloak or robe, popularly known as Abaya, also referred to as Aba, Abah, all represent this everyday clothing that effortlessly covers the entire body.</p>
             <a routerLink="/sleeves">Read More <i class="icofont-simple-right"></i></a>
           </div>
