--- a/Web/src/app/footer/footer.component.html
+++ b/Web/src/app/footer/footer.component.html
@@ -21,7 +21,7 @@
         </ul>
       </div>
       <div class="clear"></div>
-      
+
     </div>
     <div class="container">
       <div class="copyright">
@@ -30,8 +30,8 @@
       <div class="foosocial">
         <a href="https://www.facebook.com/nishomiabayas/" target="_blank"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com/nishomiabayas/" target="_blank"><i class="icofont-instagram"></i></a>
-        <a href="#" target="_blank"><i class="icofont-twitter"></i></a>
-        <a href="#" target="_blank"><i class="icofont-brand-youtube"></i></a>
+        <a href="https://twitter.com/nish_omi" target="_blank"><i class="icofont-twitter"></i></a>
+        <!-- <a href="#" target="_blank"><i class="icofont-brand-youtube"></i></a> -->
       </div>
     </div>
   </footer>
