--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -16,7 +16,7 @@
         <div class="social">
           <a href="https://www.facebook.com/nishomiabayas/" target="_blank"><i class="icofont-facebook"></i></a>
           <a href="https://www.instagram.com/nishomiabayas/" target="_blank"><i class="icofont-instagram"></i></a>
-          <a href="#" target="_blank"><i class="icofont-twitter"></i></a>
+          <a href="https://twitter.com/nish_omi" target="_blank"><i class="icofont-twitter"></i></a>
         </div>
         <ul class="sub">
           <li><a routerLink="/products">View Products</a></li>
