--- a/Web/src/app/productdetails/productdetails.component.html
+++ b/Web/src/app/productdetails/productdetails.component.html
@@ -45,117 +45,130 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="proddtls">
-          <h5><a href="">{{product.categoryName}}</a></h5>
-          <h6>Nishomi - {{product.categoryName}} {{product.productCode}}</h6>
-          <div class="price">
-            <div class="new">AED {{product.cost.toFixed(2)}}</div>
-          </div>
-          <p>{{product.description}}</p>
-          <ul class="product-meta">
-            <li>Code: <span>{{product.productCode}}</span></li>
-            <!-- <li>Availability: <span>In stock</span></li> -->
-          </ul>
+        <form [formGroup]="profileForm" (ngSubmit)="buyProduct()">
+          <div class="proddtls">
+            <h5><a href="">{{product.categoryName}}</a></h5>
+            <h6>Nishomi - {{product.categoryName}} {{product.productCode}}</h6>
+            <div class="price">
+              <div class="new">AED {{product.cost.toFixed(2)}}</div>
+            </div>
+            <p>{{product.description}}</p>
+            <ul class="product-meta">
+              <li>Code: <span>{{product.productCode}}</span></li>
+              <!-- <li>Availability: <span>In stock</span></li> -->
+            </ul>
 
-          <!-- <div class="quantity">
-            <h6>Quantity: </h6>
-            <input type="button" value="-" class="minus" (click)="(changeQuantity('decrement'))">
-            <input type="text" name="quantity" disabled value="{{quantity}}" title="Qty" class="qty" size="4">
-            <input type="button" value="+" class="plus" (click)="(changeQuantity('increment'))">
-          </div> -->
-          <div class="cart-product-quantity">
-            <div class="sizeabaya">
-              <h6>Size:</h6>
-              <ul class="size-list">
-                <li>
-                  <a role="button" class="size_item" [ngClass]="selectedSize=='54'?'selected':''"
-                    (click)="selectSize('54')" data-value="54">54</a>
-                </li>
-                <li>
-                  <a role="button" class="size_item" [ngClass]="selectedSize=='56'?'selected':''"
-                    (click)="selectSize('56')" data-value="56">56</a>
-                </li>
-                <li>
-                  <a role="button" class="size_item" [ngClass]="selectedSize=='58'?'selected':''"
-                    (click)="selectSize('58')" data-value="58">58</a>
-                </li>
-                <li>
-                  <a role="button" class="size_item" [ngClass]="selectedSize=='60'?'selected':''"
-                    (click)="selectSize('60')" data-value="60">60</a>
-                </li>
-              </ul>
-              <div class="customizeblk">
-                <h6 class="custombtm" role="button" (click)="toggleCustomeSize()"><span>CUSTOM SIZE</span></h6>
-                <div class="customsize" [ngClass]="showCustomsize ? 'show' : ''">
-                  <ul>
-                    <li>
-                      <img src="assets/images/size/01.jpg" alt="">
-                      <p>Full Length</p>
-                      <input [formControl]="fullLength" type="text" placeholder="in inches">
-                    </li>
-                    <li>
-                      <img src="assets/images/size/02.jpg" alt="">
-                      <p>Sleeve Length</p>
-                      <input [formControl]="sleeveLength" type="text" placeholder="in inches">
-                    </li>
-                    <li>
-                      <img src="assets/images/size/03.jpg" alt="">
-                      <p>Bust</p>
-                      <input [formControl]="bust" type="text" placeholder="in inches">
-                    </li>
-                    <li>
-                      <img src="assets/images/size/04.jpg" alt="">
-                      <p>Hip</p>
-                      <input [formControl]="hip" type="text" placeholder="in inches">
-                    </li>
-                  </ul>
-                  <div class="termsblk">
-                    <input type="checkbox" id="Terms" name="Terms" value="Terms">
-                    <label for="Terms">I accept the <a routerLink="/terms"> Terms & Conditions</a></label><br>
+            <!-- <div class="quantity">
+              <h6>Quantity: </h6>
+              <input type="button" value="-" class="minus" (click)="(changeQuantity('decrement'))">
+              <input type="text" name="quantity" disabled value="{{quantity}}" title="Qty" class="qty" size="4">
+              <input type="button" value="+" class="plus" (click)="(changeQuantity('increment'))">
+            </div> -->
+            <div class="cart-product-quantity">
+              <div class="sizeabaya">
+                <h6>Size:</h6>
+                <ul class="size-list">
+                  <li>
+                    <a role="button" class="size_item" [ngClass]="selectedSize=='54'?'selected':''"
+                      (click)="selectSize('54')" data-value="54">54</a>
+                  </li>
+                  <li>
+                    <a role="button" class="size_item" [ngClass]="selectedSize=='56'?'selected':''"
+                      (click)="selectSize('56')" data-value="56">56</a>
+                  </li>
+                  <li>
+                    <a role="button" class="size_item" [ngClass]="selectedSize=='58'?'selected':''"
+                      (click)="selectSize('58')" data-value="58">58</a>
+                  </li>
+                  <li>
+                    <a role="button" class="size_item" [ngClass]="selectedSize=='60'?'selected':''"
+                      (click)="selectSize('60')" data-value="60">60</a>
+                  </li>
+                </ul>
+                <div class="customizeblk">
+                  <h6 class="custombtm" role="button" (click)="toggleCustomeSize()"><span>CUSTOM SIZE</span></h6>
+                  <div class="customsize" [ngClass]="showCustomsize ? 'show' : ''">
+                    <ul>
+                      <li>
+                        <img src="assets/images/size/01.jpg" alt="">
+                        <p>Full Length</p>
+                        <input [formControl]="fullLength" type="text" placeholder="in inches">
+                      </li>
+                      <li>
+                        <img src="assets/images/size/02.jpg" alt="">
+                        <p>Sleeve Length</p>
+                        <input [formControl]="sleeveLength" type="text" placeholder="in inches">
+                      </li>
+                      <li>
+                        <img src="assets/images/size/03.jpg" alt="">
+                        <p>Bust</p>
+                        <input [formControl]="bust" type="text" placeholder="in inches">
+                      </li>
+                      <li>
+                        <img src="assets/images/size/04.jpg" alt="">
+                        <p>Hip</p>
+                        <input [formControl]="hip" type="text" placeholder="in inches">
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="termsblk">
+              <input type="checkbox" id="Terms" name="Terms" value="Terms" formControlName="acceptTAC">
+              <label for="Terms">I accept the <a routerLink="/terms"> Terms & Conditions</a></label><br>
+              <span class="error" *ngIf="orderClicked && !profileForm.controls.acceptTAC.valid">Accept terms and conditions</span>
+            </div>
+            <a href="javascript:void(0)" class="btnbuy" (click)="setBuyNow('buy')">Order now</a>
+            <a href="javascript:void(0)" class="btncart" (click)="setBuyNow('intrest')">Show Interest</a>
+            <!-- <button class="btn btn-fill-out btn-addtocart btncart" type="button">Request Interest</button> -->
           </div>
-          <a href="javascript:void(0)" class="btnbuy" (click)="setBuyNow('buy')">Order now</a>
-        <a href="javascript:void(0)" class="btncart" (click)="setBuyNow('intrest')">Show Interest</a>
-          <!-- <button class="btn btn-fill-out btn-addtocart btncart" type="button">Request Interest</button> -->
-        </div>
-        <div class="proddesc">
-          <div class="buyform" id="buyform">
-            <h2>Contact Details</h2>
-            <form [formGroup]="profileForm">
-              <div class="row">
-                <div class="form-group col-md-12">
-                  <input formControlName="name" type="text" required="required">
-                  <label for="input" class="control-label">Full Name</label><i class="bar"></i>
+          <div class="proddesc" [ngClass]="{'show': (showContactForm && profileForm.controls.acceptTAC.value) }">
+            <div class="buyform" id="buyform">
+              <h2>Contact Details</h2>
+
+                <div class="row">
+                  <div class="form-group col-md-12">
+                    <input formControlName="name" type="text" required="required">
+                    <label for="input" class="control-label">Full Name</label><i class="bar"></i>
+                    <span class="error" *ngIf="(submitted || profileForm.controls.name.touched) && !profileForm.controls.name.valid">Name is Mandatory</span>
+                  </div>
+                  <div class="form-group col-md-12">
+                    <input formControlName="cusmail" type="text" required="required">
+                    <label for="input" class="control-label">Email Id</label><i class="bar"></i>
+                    <span class="error" *ngIf="(submitted || profileForm.controls.cusmail.touched) && !profileForm.controls.cusmail.valid">
+                      {{ profileForm.controls.cusmail.errors.required ? 'Email Id is Mandatory' : 'Enter Valid Email Id' }}
+                    </span>
+                  </div>
+                  <div class="form-group col-md-12">
+                    <input formControlName="phone" type="text" required="required" appNumberOnly [maxlen]="11">
+                    <label for="input" class="control-label">Contact Number</label><i class="bar"></i>
+                    <span class="error" *ngIf="(submitted || profileForm.controls.phone.touched) && !profileForm.controls.phone.valid">
+                      {{ profileForm.controls.phone.errors.required ? 'Contact Number is Mandatory' : 'Enter Valid Contact Number' }}
+                    </span>
+                  </div>
+                  <div class="form-group col-md-12">
+                    <textarea formControlName="address" required="required"></textarea>
+                    <label for="textarea" class="control-label">Address</label><i class="bar"></i>
+                    <span class="error" *ngIf="(submitted || profileForm.controls.address.touched) && !profileForm.controls.address.valid">Address is Mandatory</span>
+                  </div>
+                  <div class="form-group col-md-12">
+                    <textarea formControlName="message" required="required"></textarea>
+                    <label for="textarea" class="control-label">Message</label><i class="bar"></i>
+                  </div>
+
                 </div>
-                <div class="form-group col-md-12">
-                  <input formControlName="cusmail" type="text" required="required">
-                  <label for="input" class="control-label">Email Id</label><i class="bar"></i>
+                <div class="button-container">
+                  <div *ngIf="isBuyNow; else elseBlock">
+                    <button type="submit" class="button"><span>Place an Order</span></button>
+                  </div>
+                  <ng-template #elseBlock>
+                    <button type="submit" class="button"><span>Send a product Interest</span></button>
+                  </ng-template>
                 </div>
-                <div class="form-group col-md-12">
-                  <input formControlName="phone" type="text" required="required">
-                  <label for="input" class="control-label">Contact Number</label><i class="bar"></i>
-                </div>
-                <div class="form-group col-md-12">
-                  <textarea formControlName="address" required="required"></textarea>
-                  <label for="textarea" class="control-label">Address</label><i class="bar"></i>
-                </div>
-                <div class="form-group col-md-12">
-                  <textarea formControlName="message" required="required"></textarea>
-                  <label for="textarea" class="control-label">Message</label><i class="bar"></i>
-                </div>
-  
-              </div>
-            </form>
-            <div class="button-container">
-              <div *ngIf="isBuyNow; else elseBlock"><button type="button" class="button"
-                  (click)="buyProduct()"><span>Place an Order</span></button></div>
-              <ng-template #elseBlock><button type="button" class="button" (click)="buyProduct()"><span>Send a product Interest</span></button></ng-template>
             </div>
           </div>
-        </div>
+        </form>
       </div>
 
     </div>
