--- a/Web/src/app/modal/modal.component.html
+++ b/Web/src/app/modal/modal.component.html
@@ -26,13 +26,13 @@
                     <div class="prodpage"></div>
                   </div>
                 </div>
-      
+
                 <div class="col-md-6">
                   <div class="prodpop">
                     <h5>Ready to wear</h5>
                     <h2>Luxury chiffon Abaya</h2>
                     <div class="price-box">
-                      <span class="new">SR 225.00</span>
+                      <span class="new">{{ '225.00' | aedcurrency }}</span>
                     </div>
                     <p>The white fabric accentuated by the olive green button work defines elegance. The green detail in the sleeves adds a flair of style to the piece, making it a perfect addition of a white robe to your wardrobe.</p>
                     <div class="pr_switch_wrap">
