--- a/Services/Analystor.Nishomi.Admin/Views/Product/Index.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Product/Index.cshtml
@@ -15,6 +15,7 @@
             <tr>
                 <th></th>
                 <th>Product Code</th>
+                <th>Arabic Product Code</th>
                 <th>Name</th>
                 <th>Caption</th>
                 <th>Type</th>
@@ -55,6 +56,7 @@
                     { orderable: false, targets: 4 },
                     { orderable: false, targets: 5 },
                     { orderable: false, targets: 6 },
+                    { orderable: false, targets: 7 },
                     {
                         "defaultContent": "-",
                         "targets": "_all"
@@ -63,6 +65,7 @@
                 columns: [
                     { data: "productId", name: "productId", visible: false },
                     { data: "productCode", name: "productCode" },
+                    { data: "productCodeAr", name: "productCodeAr" },
                     { data: "productName", name: "name" },
                     { data: "caption", name: "caption" },
                     { data: "type", name: "type" },
