--- a/Services/Analystor.Nishomi.Admin/Views/Product/Edit.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Product/Edit.cshtml
@@ -19,15 +19,22 @@
                         <input type="hidden" asp-for="ProductId">
                     </div>
                     <div class="col-md-6 formsingle">
-                        <label class="mandatory">Product Name</label>
-                        <input type="text" asp-for="Name" id="productName" placeholder="Product name">
+                        <label class="mandatory">Arabic Product Code</label>
+                        <input type="text" asp-for="ProductCodeAr" id="productCode" placeholder="Arabic Product Code">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 formsingle">
+                        <label class="mandatory">Product Name</label>
+                        <input type="text" asp-for="Name" id="productName" placeholder="Product name">
+                    </div>
+                    <div class="col-md-6 formsingle">
                         <label class="mandatory">Type</label>
                         <input type="text" asp-for="Type" id="localName" placeholder="Type">
                     </div>
+
+                </div>
+                <div class="row">
                     <div class="col-md-6 formsingle">
                         <label class="mandatory">Is Featured</label>
                         @if (Model.IsFeatured)
@@ -39,8 +46,6 @@
                             <input type="checkbox" asp-for="IsFeatured" id="productName">
                         }
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-md-6 formsingle">
                         <label class="mandatory">Product Category</label>
                         <select id="cat-field" asp-for="CategoryId"
@@ -48,12 +53,13 @@
                             <option value="" disabled>-Select Category-</option>
                         </select>
                     </div>
+
+                </div>
+                <div class="row">
                     <div class="col-md-6 formsingle">
                         <label class="mandatory">Color</label>
                         <input type="text" asp-for="Color" id="productPrice" placeholder="Color">
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-md-4 formsingle">
                         <label class="mandatory">Product Cost</label>
                         <input type="number" asp-for="Cost" id="productPrice" placeholder="Cost">
@@ -72,9 +78,16 @@
                         <label class="mandatory">Caption</label>
                         <input type="text" asp-for="Caption" id="productPrice" placeholder="Caption">
                     </div>
+                    
+                </div>
+                <div class="row">
                     <div class="col-md-6 formsingle">
                         <label>Description</label>
                         <textarea type="text" class="md-textarea form-control" asp-for="Description" id="description" placeholder="Description" rows="3"></textarea>
+                    </div>
+                    <div class="col-md-6 formsingle">
+                        <label>Arabic Description</label>
+                        <textarea type="text" class="md-textarea form-control" asp-for="DescriptionAr" id="description" placeholder="Arabic Description" rows="3"></textarea>
                     </div>
                 </div>
                 <div class="row">
